--- a/app/src/main/res/layout/fragment_bookmark.xml
+++ b/app/src/main/res/layout/fragment_bookmark.xml
@@ -1,73 +1,50 @@
-<?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools">
+<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/frame_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <data>
-
-        <import type="android.view.View" />
-
-        <variable
-                name="viewModel"
-                type="com.example.translator_kotlin.presentation.bookmark.BookmarkViewModel" />
-    </data>
-
-    <FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/frame_layout"
+    <LinearLayout
+            android:orientation="vertical"
+            android:id="@+id/parent_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
         <LinearLayout
-                android:orientation="vertical"
-                android:id="@+id/parent_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:gravity="top|center"
-                    android:background="@color/colorPrimary">
-
-                <com.google.android.material.tabs.TabLayout
-                        android:id="@+id/tabLayout"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        app:tabIndicatorColor="@android:color/black" />
-            </LinearLayout>
-
-            <androidx.viewpager2.widget.ViewPager2
-                    android:id="@+id/viewPager"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-
-        </LinearLayout>
-
-        <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:gravity="top">
+                android:gravity="top|center"
+                android:background="@color/colorPrimary">
 
-            <ImageButton
-                    android:id="@+id/buttonClearHistory"
-                    android:layout_width="wrap_content"
+            <com.google.android.material.tabs.TabLayout
+                    android:id="@+id/tabLayout"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:scaleType="center"
-                    android:background="@drawable/ic_garbage"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="8dp" />
-        </RelativeLayout>
+                    android:layout_gravity="center"
+                    app:tabIndicatorColor="@android:color/black" />
+        </LinearLayout>
 
-        <com.example.translator_kotlin.presentation.dialog.DialogShowingView
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                app:dialogConfig="@{viewModel.dialogConfig}"
-                app:dialogLayout="@layout/layout_dialog"
-                app:dialogStyle="@style/Theme.AppCompat.Dialog"
-                app:dialogViewModel="@{viewModel.dialogViewModel}"
-                app:visibleOrGone="@{viewModel.isDialogVisible}"
-                tools:ignore="MissingConstraints" />
+        <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/viewPager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
-    </FrameLayout>
-</layout>
+    </LinearLayout>
+
+    <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:gravity="top">
+
+        <ImageButton
+                android:id="@+id/buttonClearHistory"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scaleType="center"
+                android:background="@drawable/ic_garbage"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="8dp" />
+    </RelativeLayout>
+
+</FrameLayout>
