--- a/app/src/main/res/layout/layout_dialog.xml
+++ b/app/src/main/res/layout/layout_dialog.xml
@@ -1,72 +1,55 @@
-<?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/dialog_bg"
+        android:padding="16dp">
 
-    <data>
+    <TextView
+            android:id="@+id/title"
+            style="@style/TextAppearance.AppCompat.Title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="gone"
+            tools:visibility="visible"
+            tools:text="@string/error_title" />
 
-        <import type="android.view.View" />
+    <TextView
+            android:id="@+id/body"
+            style="@style/TextAppearance.AppCompat.Body1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/title"
+            android:visibility="gone"
+            tools:visibility="visible"
+            tools:text="@string/error_default" />
 
-        <variable
-                name="viewModel"
-                type="com.example.translator_kotlin.presentation.dialog.IDialogViewModel" />
+    <Button
+            android:id="@+id/positiveButton"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/body"
+            android:visibility="gone"
+            tools:visibility="visible"
+            tools:text="@string/ok" />
 
-        <variable
-                name="uiConfig"
-                type="com.example.translator_kotlin.presentation.dialog.DialogUiConfig" />
-    </data>
+    <Button
+            android:id="@+id/negativeButton"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toStartOf="@id/positiveButton"
+            app:layout_constraintTop_toBottomOf="@id/body"
+            android:visibility="gone"
+            tools:visibility="visible"
+            tools:text="@string/cancel" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="320dp"
-            android:layout_height="match_parent"
-            android:padding="16dp">
-
-        <TextView
-                android:id="@+id/title"
-                style="@style/TextAppearance.AppCompat.Title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@{uiConfig.title}"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="@string/error_title" />
-
-        <TextView
-                android:id="@+id/message"
-                style="@style/TextAppearance.AppCompat.Body1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="@{uiConfig.message}"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/title"
-                tools:text="@string/error_default" />
-
-        <Button
-                android:id="@+id/positiveButton"
-                style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text='@{uiConfig.positiveButtonText ?? ""}'
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/message"
-                android:visibility="@{uiConfig.positiveButtonText == null ? View.GONE : View.VISIBLE}"
-                app:onClick="@{viewModel::onPositiveButtonClick}"
-                tools:text="@string/ok" />
-
-        <Button
-                android:id="@+id/negativeButton"
-                style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text='@{uiConfig.negativeButtonText ?? ""}'
-                app:layout_constraintEnd_toStartOf="@id/positiveButton"
-                app:layout_constraintTop_toBottomOf="@id/message"
-                app:onClick="@{viewModel::onNegativeButtonClick}"
-                android:visibility="@{uiConfig.negativeButtonText == null ? View.GONE : View.VISIBLE}"
-                tools:text="@string/cancel" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</layout>
+</androidx.constraintlayout.widget.ConstraintLayout>
